--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,55 @@
+:root {
+  --Very-dark-blue: hsl(233, 47%, 7%);
+  --Dark-desaturated-blue: hsl(244, 38%, 16%);
+  --Soft-violet: hsl(277, 64%, 61%);
+  --White: hsl(0, 0%, 100%);
+  --Slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
+  --Slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
+}
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: var(--Very-dark-blue);
+  font-size: 15px;
+}
+
+.card-component {
+  background-color: var(--Dark-desaturated-blue);
+  border-radius: 10px;
+  inline-size: 325px;
+  margin: auto;
+  margin-block-start: 85px;
+}
+
+.card-image img {
+  block-size: 240px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  inline-size: 100%;
+}
+
+.card-descriptions h1 {
+  color: var(--White);
+  font-family: "Inter", sans-serif;
+  font-size: 25px;
+  margin-block: 40px 20px;
+  margin-inline: 34px;
+  text-align: center;
+}
+.card-descriptions p {
+  color: var(--Slightly-transparent-white);
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: #3e52a3;
+}
 
 /*# sourceMappingURL=main.css.map */
