--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 
 body {
   background-color: var(--Very-dark-blue);
+  font-family: "Lexend Deca", sans-serif;
   font-size: 15px;
 }
 
@@ -24,7 +25,7 @@ body {
   flex-direction: column;
   inline-size: 325px;
   margin: auto;
-  margin-block-start: 85px;
+  margin-block-start: 40px;
 }
 
 .card-image {
@@ -50,7 +51,7 @@ body {
 }
 .card-descriptions .description {
   color: var(--Slightly-transparent-white);
-  font-family: "Lexend Deca", sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   line-height: 24px;
   margin-block-end: 50px;
@@ -62,6 +63,18 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-block-end: 25px;
+}
+.card-reference .info {
+  margin-block-end: 25px;
+}
+.card-reference .info h2 {
+  color: var(--White);
+  margin-block-end: 10px;
+}
+.card-reference .info p {
+  color: var(--Slightly-transparent-white);
+  text-transform: uppercase;
 }
 
 .attribution {
