--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 
 body {
   background-color: var(--Very-dark-blue);
+  font-family: "Lexend Deca", sans-serif;
   font-size: 15px;
 }
 
@@ -27,7 +28,7 @@ body {
   flex-direction: column;
   inline-size: 325px;
   margin: auto;
-  margin-block-start: 85px;
+  margin-block-start: 40px;
 }
 
 .card-image {
@@ -56,7 +57,7 @@ body {
 
   .description {
     color: var(--Slightly-transparent-white);
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     line-height: 24px;
     margin-block-end: 50px;
@@ -69,6 +70,21 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin-block-end: 25px;
+
+  .info {
+    margin-block-end: 25px;
+
+    h2 {
+      color: var(--White);
+      margin-block-end: 10px;
+    }
+
+    p {
+      color: var(--Slightly-transparent-white);
+      text-transform: uppercase;
+    }
+  }
 }
 
 .attribution {
