--- a/css/main.css
+++ b/css/main.css
@@ -78,11 +78,19 @@ body {
 }
 
 .attribution {
+  color: var(--Slightly-transparent-white);
   font-size: 11px;
+  margin-block-end: 20px;
+  margin-block-start: 20px;
   text-align: center;
 }
 .attribution a {
-  color: #3e52a3;
+  color: var(--White);
+}
+.attribution a:hover {
+  color: var(--Slightly-transparent-white);
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
 }
 
 /*# sourceMappingURL=main.css.map */
