--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,6 +31,7 @@ body {
   margin-block-start: 40px;
 }
 
+/* ---------imagen------------ */
 .card-image {
   background: linear-gradient(rgba(170, 91, 219, 0.5), rgba(170, 91, 219, 0.5)),
     url("../images/image-header-mobile.jpg");
@@ -41,6 +42,7 @@ body {
   inline-size: 100%;
 }
 
+/* ----------Description-------- */
 .card-descriptions {
   h1 {
     color: var(--White);
@@ -88,6 +90,7 @@ body {
   }
 }
 
+/* ------footer---------- */
 .attribution {
   color: var(--Slightly-transparent-white);
   font-size: 11px;
@@ -97,12 +100,12 @@ body {
 
   a {
     color: var(--White);
-  }
 
-  a:hover {
-    color: var(--Slightly-transparent-white);
-    font-family: "Inter", sans-serif;
-    font-weight: bold;
+    &:hover {
+      color: var(--Slightly-transparent-white);
+      font-family: "Inter", sans-serif;
+      font-weight: bold;
+    }
   }
 }
 
